# nginx-0.4.1-research

./: .gitignore  CMakeLists.txt  README.md
auto/: install
auto/cc/: gcc
conf/: nginx.conf
src/auto/: ngx_auto_config.h  ngx_modules.c
src/core/: nginx.c  ngx_array.h  ngx_buf.c  ngx_buf.h  ngx_conf_file.c  ngx_conf_file.h  ngx_config.h  ngx_cpuinfo.c  ngx_cycle.c  ngx_cycle.h  ngx_output_chain.c  ngx_palloc.c  ngx_palloc.h  ngx_shmtx.c  ngx_shmtx.h  ngx_spinlock.c  ngx_times.c  ngx_times.h
src/event/: ngx_event.c  ngx_event_accept.c
src/http/: ngx_http.c  ngx_http_core_module.c  ngx_http_core_module.h  ngx_http_header_filter_module.c  ngx_http_parse.c  ngx_http_request.c  ngx_http_request.h  ngx_http_write_filter_module.c
src/http/modules/: ngx_http_gzip_filter_module.c
src/os/unix/: ngx_alloc.c  ngx_channel.h  ngx_gcc_atomic_amd64.h  ngx_gcc_atomic_ppc.h  ngx_linux.h  ngx_linux_config.h  ngx_linux_init.c  ngx_linux_sendfile_chain.c  ngx_posix_init.c  ngx_process.c  ngx_process.h  ngx_process_cycle.c  ngx_shmem.c  ngx_shmem.h  ngx_socket.c
tools/: flist.c
